--- a/atkm/src/app/features/atk-dev-integration/atk-dev-integration.component.html
+++ b/atkm/src/app/features/atk-dev-integration/atk-dev-integration.component.html
@@ -1,10 +1,10 @@
 <div class="content-wrapper" [class.config-collapsed]="configPanelCollapsed">
   <header class="content-header">
-    <h1>atk-dev-integration {{ configPanelCollapsed }}</h1>
+    <!-- <h1>atk-dev-integration {{ configPanelCollapsed }}</h1> -->
   </header>
   <div class="terminal-wrapper">
     <header class="terminal-header">
-      <h1>atomeek.dev.integration Component {{ configPanelCollapsed }}</h1>
+      <!-- <h1>atomeek.dev.integration Component {{ configPanelCollapsed }}</h1> -->
       <div class="terminal-details">
         <h2>when data finally reaches its owner.</h2>
       </div>
@@ -33,8 +33,8 @@
   </div>
 </div>
 
-<atk-sidebar-config [sections]="config.configPanel.sections" [isCollapsed]="config.configPanel.isCollapsed"
-  (togglePanel)="toggleConfigPanel()" />
+<!-- <atk-sidebar-config [sections]="config.configPanel.sections" [isCollapsed]="config.configPanel.isCollapsed"
+  (togglePanel)="toggleConfigPanel()" /> -->
 
 <!-- <atk-sidebar-bash-config [isCollapsed]="config.configPanel.isCollapsed" (togglePanel)="toggleConfigPanel()" /> -->
 
