--- a/atkm/src/app/shared/components/navbar-tools/navbar-tools.component.html
+++ b/atkm/src/app/shared/components/navbar-tools/navbar-tools.component.html
@@ -1,7 +1,7 @@
 <div class="user-tools" [class.config-collapsed]="configPanelCollapsed">
 
   <div class="search-wrapper">
-    <atk-icon class="search-icon" name="search" [size]="16" color="currentColor" />
+    <atk-icon class="search-icon" name="search" color="currentColor" />
     <input type="text" class="search-input" placeholder="Type / to search" (keydown)="handleSearchShortcut($event)" />
   </div>
 
