--- a/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
+++ b/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
@@ -31,10 +31,10 @@
     <div class="terminal-section">
       <div class="section-content">
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
-        <atk-bash configId="binance-debug-v2" [autoLoad]="true" (configRequest)="onBashConfigRequest($event)"
-          (dataLoaded)="onBashDataLoaded($event)" (errorOccurred)="onBashError($event)" />
+        <atk-bash configId="binance-debug-v2" [autoLoad]="true" (dataLoaded)="onBashDataLoaded($event)"
+          (errorOccurred)="onBashError($event)" />
       </div>
-
+      <!-- (configRequest)="onBashConfigRequest($event)" -->
       <div class="terminal-section">
         <div class="infos-items">
           <div class="infos-item" [class.enabled]="currentAccount.canTrade">
