--- a/atkm/src/app/shared/components/atk-api-management/atk-api-management.component.html
+++ b/atkm/src/app/shared/components/atk-api-management/atk-api-management.component.html
@@ -6,8 +6,8 @@
     <div class="terminal-section">
       <div class="section-content">
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
-        <atk-bash [configId]="configId()" [autoLoad]="autoLoad()" (dataLoaded)="onBashDataLoaded($event)"
-          (errorOccurred)="onBashError($event)" (eventEmitted)="onBashEvent($event)" />
+        <atk-bash [configId]="configId()" [autoLoad]="autoLoad()" />
+        <!-- (dataLoaded)="onBashDataLoaded($event)"   (errorOccurred)="onBashError($event)" (eventEmitted)="onBashEvent($event)"-->
       </div>
     </div>
 
