--- a/atkm/src/app/shared/components/navbar-brand/navbar-brand.component.html
+++ b/atkm/src/app/shared/components/navbar-brand/navbar-brand.component.html
@@ -1,4 +1,4 @@
-<div class="menu-brand" [class.config-collapsed]="configPanelCollapsed">
+<div class="menu-brand" [class.config-collapsed]="configPanelCollapsed()">
   <div class="menu-brand-content">
     <div class="menu-brand-header">
       <span>
