--- a/atkm/src/app/shared/components/navbar-tools/navbar-tools.component.html
+++ b/atkm/src/app/shared/components/navbar-tools/navbar-tools.component.html
@@ -1,4 +1,4 @@
-<div class="user-tools" [class.config-collapsed]="configPanelCollapsed">
+<div class="user-tools" [class.config-collapsed]="configPanelCollapsed()">
 
   <div class="search-wrapper">
     <atk-icon class="search-icon" name="search" color="currentColor" />
