--- a/atkm/src/app/shared/components/atk-bash/atk-bash.component.css
+++ b/atkm/src/app/shared/components/atk-bash/atk-bash.component.css
@@ -137,11 +137,11 @@
 
 .bash-input {
   width: 100%;
-  min-height: var(--input-min-height, 500px);
+  min-height: var(--input-min-height);
   padding: 16px;
   /* border: 1px solid var(--color-border-default); */
   border-radius: 6px;
-  background: var(--color-canvas-inset);
+  background: var(--color-canvas-subtle);
   font-family: var(--fontStack-monospace);
   font-size: 13px;
   line-height: 1.5;
@@ -155,7 +155,7 @@
 
 .bash-input:focus {
   outline: none;
-  border-color: var(--color-accent-emphasis);
+  /* border-color: var(--color-accent-emphasis); */
   box-shadow: 0 0 0 2px rgba(79, 172, 254, 0.2);
 }
 
