✨ feat:  atk-datatable  yoooooooo ! ---------------------------------------- - ayé chui troému

--- a/atkm/src/app/shared/components/atk-api-management/atk-api-management.component.html
+++ b/atkm/src/app/shared/components/atk-api-management/atk-api-management.component.html
@@ -13,10 +13,10 @@
 
     <!-- Data Display Section -->
     <div class="data-section">
-      <atk-datatable #dt [data]="apiStateService.tableData()" [loading]="apiStateService.loading()"
+      <!-- <atk-datatable #dt [data]="apiStateService.tableData()" [loading]="apiStateService.loading()"
         [error]="apiStateService.error()" [columns]="currentEndpointColumns()" [searchEnabled]="true"
         [itemsPerPage]="50" [rowClickable]="true" (rowClick)="onDataRowClick($event)" (retryLoad)="onRetryDataLoad()"
-        (exportRequest)="onDataExport($event)" />
+        (exportRequest)="onDataExport($event)" /> -->
     </div>
 
   </div>
